<resources>
    <string name="app_name">TaskManagerProject</string>
    <string name="title">Title</string>
    <string name="due_1_1s">Due 1%1s</string>
    <string name="all_details">All Details</string>
    <string name="details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_task_is_due">Date Task is Due</string>
    <string name="task_name">Task Name</string>
    <string name="details_of_task">Details of Task</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_details">Task Details</string>
    <string name="date_due">date due</string>
    <string name="created_date">created date</string>
    <string name="date_completed">date completed</string>
    <string name="go_back">Go Back</string>
</resources>
