<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".TaskDetails">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/task_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/task_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/task_details"
        app:layout_constraintStart_toStartOf="@+id/task_details"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/task_details"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/date_created_editText"
        app:layout_constraintStart_toStartOf="@+id/date_created_editText"
        app:layout_constraintTop_toBottomOf="@+id/task_name_editText" />

    <EditText
        android:id="@+id/date_due_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/date_due"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date_completed_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/date_completed_editText"
        app:layout_constraintTop_toBottomOf="@+id/date_created_editText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/date_created_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/created_date"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date_due_editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/date_due_editText"
        app:layout_constraintTop_toBottomOf="@+id/task_details"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/date_completed_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/date_completed"
        android:inputType="date"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/go_back_button"
        app:layout_constraintStart_toStartOf="@+id/go_back_button"
        app:layout_constraintTop_toBottomOf="@+id/date_due_editText" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/go_back"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_completed_editText"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>